# hackathon-poi-wizz

./: .env-example  .gitignore  vercel.json
backend/: db.py  main.py  preprocess.py  pupulate_db.py  pyproject.toml
backend/api/: amenities.py  chat.py
backend/data/: examples.csv  medical_amenities.csv  medical_amenities_cleaned.csv
backend/notebooks/: test.ipynb
backend/query_intent/: analyze.py
backend/scripts/: geocodeenrichment.py  populate.py
frontend/app/: layout.tsx  page.tsx
frontend/app/amenities/: page.tsx
frontend/app/api/amenities/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/browse-amenities/: page.tsx
frontend/components/: amenity-card.tsx  amenity-list.tsx  location-permission-alert.tsx
frontend/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx
frontend/hooks/: use-toast.ts  use-user-location.ts
