[project]
name = "hackathon-poi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "datasets>=3.6.0",
    "dateparser>=1.2.1",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "spacy>=3.8.5",
    "supabase>=2.15.1",
    "uvicorn[standard]>=0.34.2",
]
